tests/reference/asr-test_const_list_append-ada1ade.stderr
semantic error: Type name is not implemented yet.
 --> tests/errors/test_const_list_append.py:7:5
  |
7 |     CONST_INTEGER_LIST.append(6)
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
